# djade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Cargo.toml  LICENSE  README.rst  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: build.yml  main.yml
python/: .gitignore
src/: cli.rs  main.rs
tests/: integration.rs
