[build-system]
build-backend = "maturin"
requires = [ "maturin>=1,<2" ]

[project]
name = "djade"
version = "1.6.0"
description = "A Django template formatter."
readme = "README.rst"
keywords = [
  "Django",
]
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Adam Johnson", email = "me@adamj.eu" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
urls.Changelog = "https://github.com/adamchainz/djade/blob/main/CHANGELOG.rst"
urls.Funding = "https://adamj.eu/books/"
urls.Repository = "https://github.com/adamchainz/djade"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "djade"
python-source = "python"
strip = true
include = [
  "rust-toolchain.toml",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.rstcheck]
report_level = "ERROR"
